twitter link upadated

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="https://plus.google.com/u/0/117944215922458843920" target="_blank">
                             <i class="fa fa-google-plus w3-hover-opacity w3-xxlarge "></i>
                         </a>
-                        <a href="https://twitter.com/Pravin_Vijaya" target="_blank">
+                        <a href="https://twitter.com/pravindia1996" target="_blank">
                             <i class="fa fa-twitter w3-hover-opacity w3-xxlarge "></i>
                         </a>
                         <a href="https://www.linkedin.com/in/pravin-kumar-8401bb127/" target="_blank">
