--- a/index.html
+++ b/index.html
@@ -190,23 +190,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
             </div>
-            <script type="text/javascript">
-                window.smartlook || (function(d) {
-                    var o = smartlook = function() {
-                            o.api.push(arguments)
-                        },
-                        h = d.getElementsByTagName('head')[0];
-                    var c = d.createElement('script');
-                    o.api = new Array();
-                    c.async = true;
-                    c.type = 'text/javascript';
-                    c.charset = 'utf-8';
-                    c.src = 'https://rec.smartlook.com/recorder.js';
-                    h.appendChild(c);
-                })(document);
-                smartlook('init', 'ee32a526208dcf8229714a99568dda4e17eca18d');
-
-            </script>
+<!--<script type="text/javascript">
+    window.smartlook || (function(d) {
+        var o = smartlook = function() {
+                o.api.push(arguments)
+            },
+            h = d.getElementsByTagName('head')[0];
+        var c = d.createElement('script');
+        o.api = new Array();
+        c.async = true;
+        c.type = 'text/javascript';
+        c.charset = 'utf-8';
+        c.src = 'https://rec.smartlook.com/recorder.js';
+        h.appendChild(c);
+    })(document);
+    smartlook('init', 'ee32a526208dcf8229714a99568dda4e17eca18d');
+</script>-->
         </div>
     </div>
 </body>
